--- a/test_styles.css
+++ b/test_styles.css
@@ -3,14 +3,15 @@
     color: white;
     background-color: black;
     /* Primary tags to focus on in css box model*/
-    padding: 100px;
+    padding: 50px;
     border: 30px solid red;
     margin: 100px;
-    height: 100px;
+    height: 20px;
     width: 100px;
+    /*box-sizing: border-box*/;
     /* Additional styles*/
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 42px;
+    font-size: 15px;
 
 }
