--- a/flex/05-flex/m-sol/styles.css
+++ b/flex/05-flex/m-sol/styles.css
@@ -21,8 +21,8 @@ a{text-decoration:none;}
     background: white;
     border-radius: 15px;
     /*border: 2px solid black;*/
-    width: 40%;
-    height: 20%;
+    width: 500px;
+    height: 185px;
     padding: 20px;
     padding-bottom: 10px;
 }
@@ -46,8 +46,10 @@ a{text-decoration:none;}
 }
 
 .warning .info{
+    
     display: flex;
     flex-direction: column;
+    font-size: 15px;
     /*border: 1px solid black;*/
     flex: 1 1 auto;
 }
@@ -91,8 +93,8 @@ a{text-decoration:none;}
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    width: 26px;
-    height: 26px;
+    width: 20px;
+    height: 20px;
     /*style*/
     font-size: 15px;
     color: #888;
