--- a/flex/07-flex/styles.css
+++ b/flex/07-flex/styles.css
@@ -74,7 +74,7 @@ a{text-decoration: none;}
     /*flex*/
     display: flex;
     flex-flow: row wrap;
-    flex: 1 1 0;
+    flex: 1 1 auto;
 }
 
 .pages .blocks{
@@ -87,6 +87,8 @@ a{text-decoration: none;}
     display:flex;
     flex-direction: column-reverse ;
     border: 1px solid #eeee;
+    /*flex*/
+    flex: 0 1 auto;
 }
 
 .pages div a{
