--- a/flex/07-flex/prv-sol/styles.css
+++ b/flex/07-flex/prv-sol/styles.css
@@ -115,6 +115,10 @@ a{text-decoration: none;}
 /*footer*/
 .footer{
     /*alignment*/
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
     margin: 0;
     padding: 20px;
     /*style*/
